<resources>
    <string name="app_name">MobileProject</string>
    <string name="add_item">판매글 등록</string>
    <string name="add_image">사진 등록</string>
    <string name="title">상품명</string>
    <string name="price">가격</string>
    <string name="add">등록</string>
    <string name="used_items">상품 목록</string>
    <string name="edit_item">판매글 수정</string>
    <string name="edit">수정</string>
    <string name="content">설명</string>
    <string name="isSold">판매중 또는 판매완료</string>
    <string name="detail">글 상세보기</string>
    <string name="send_message">메시지 보내기</string>
</resources>